<resources>
    <string name="app_name" translatable="false">Testik</string>
    <string name="english" translatable="false">English</string>
    <string name="russian" translatable="false">Русский</string>
    <string name="select_language_translated" translatable="false">Select language / Выберите язык</string>
    <string name="select_translated" translatable="false">Select/Выбрать</string>
    <string name="cancel_translated" translatable="false">Cancel/Отмена</string>
    <string name="email_badly_formatted">The email address is badly formatted</string>
    <string name="email_already_taken">The email address is already taken</string>
    <string name="password_too_short">The password should contain at least 6 characters</string>
    <string name="no_passwords_match">Passwords do not match</string>
    <string name="username_already_taken">The username is already taken</string>
    <string name="username_badly_formatted">The username should contain Latin lowercase letters and digits only</string>
    <string name="username_too_short">The username should contain at least 3 characters</string>
    <string name="no_user">There is no user with this email</string>
    <string name="incorrect_password">The password is incorrect</string>
    <string name="too_many_requests">You sent too many requests. Try again in a while</string>
    <string name="unsaved_changes">Unsaved changes</string>
    <string name="unsaved_changes_confirmation">Do you really want to leave the screen? All unsaved changes will be lost</string>
    <string name="app_exit">Exit</string>
    <string name="exit_app_confirmation">Are you sure you want to exit?</string>
    <string name="exit_app">Exit</string>
    <string name="error_occurred">An error occurred</string>
    <string name="no_internet">No internet connection</string>
    <string name="error_while_saving_image">Error occurred while saving image</string>
    <string name="error_while_saving_images">Some images were not saved dur to an error</string>
    <string name="error_while_loading_results">Error occurred while loading results</string>
    <string name="blank_field_error">This field cannot be blank</string>
    <string name="empty" />
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="ok">OK</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="close">Close</string>
    <string name="info">Information</string>
    <string name="time_settings">Time settings</string>
    <string name="enable_auto_time">Please enable automatic time to make sure the app works correctly</string>
    <string name="go_to_settings">Go to settings</string>
    <string name="not_logged_in">You are not logged in</string>
    <string name="test_closed">Test is temporarily closed</string>
    <string name="test_already_taken">You have already taken the test. Only one attempt is allowed</string>
    <string name="no_access">No access</string>
    <string name="test_not_found">Test is not found</string>
    <string name="test_already_finished">Test is already finished</string>
    <string name="incorrect_questions_number">An error occurred (#100)</string>
    <string name="invalid_data_type">An error occurred (#101)</string>
    <string name="incorrect_question_number">An error occurred (#102)</string>
    <string name="too_late">An error occurred (#103)</string>
    <string name="too_late_not_accepted">Answer is not accepted: time is up</string>
    <string name="question_unanswered">Question #%d should be answered</string>
    <string name="question_unanswered_current">This question should be answered</string>
    <string name="account_login">Account Login</string>
    <string name="language">Language</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="log_in">Log in</string>
    <string name="log_in_with_google">Log in with Google</string>
    <string name="no_account">Don\'t have an account?</string>
    <string name="register_create">Register</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="reset">Reset</string>
    <string name="registration">Registration</string>
    <string name="repeat_password">Repeat password</string>
    <string name="username">Username</string>
    <string name="register">Register</string>
    <string name="register_success">Account successfully created</string>
    <string name="already_have_account">Already have an account?</string>
    <string name="password_reset">Password Reset</string>
    <string name="reset_password">Reset</string>
    <string name="follow_email_instructions">Follow the instructions sent to your email.\nif there\'s no mail, check your spam folder</string>
    <string name="profile">Profile</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="avatar">Avatar</string>
    <string name="change_avatar">Change avatar</string>
    <string name="load_avatar">Load avatar</string>
    <string name="crop_avatar">Crop avatar</string>
    <string name="delete_avatar">Delete avatar</string>
    <string name="save">Save</string>
    <string name="saved">Data successfully saved</string>
    <string name="sign_out">Sign Out</string>
    <string name="sign_out_confirmation">Do you really want to sign out?</string>
    <string name="sign_out_success">You successfully signed out</string>
    <string name="delete_account">Delete account</string>
    <string name="delete_account_confirmation">Do you really want to delete your account?</string>
    <string name="delete_account_success">You successfully deleted your account</string>
    <string name="delete_account_recent_auth_required">Please sign out and log in again to delete your account</string>
    <string name="old_password">Old password</string>
    <string name="new_password">New password</string>
    <string name="change_password">Change password</string>
    <string name="change_password_success">Password successfully changed</string>
    <string name="rotate">Rotate</string>
    <string name="flip">Flip</string>
    <string name="flip_horizontally">Flip horizontally</string>
    <string name="flip_vertically">Flip vertically</string>
    <string name="crop">Crop</string>
    <string name="main">Home</string>
    <string name="passed_tests">Passed tests</string>
    <string name="created_tests">Created tests</string>
    <string name="edit">Edit</string>
    <string name="edit_test">Edit test</string>
    <string name="demo">Run demo test</string>
    <string name="share">Share</string>
    <string name="go_to_results">Go to results</string>
    <string name="delete">Delete</string>
    <string name="test_image">Test Image</string>
    <string name="more">More</string>
    <string name="no_tests">There are no tests yet</string>
    <string name="click_to_create_test">Click on + button below to create a test</string>
    <string name="create_test">Create test</string>
    <string name="try_again">Try again</string>
    <string name="image">Image</string>
    <string name="change_image">Change image</string>
    <string name="load_image">Load image</string>
    <string name="crop_image">Crop image</string>
    <string name="delete_image">Delete image</string>
    <string name="test_settings">Test Settings</string>
    <string name="test_creation">Test Creation</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="description_optional">Description (optional)</string>
    <string name="description_too_long">Description is too long</string>
    <string name="password_optional">Password (optional)</string>
    <string name="points">Points</string>
    <string name="category">Category</string>
    <string name="category_title">Category:</string>
    <string name="select_category">Select category</string>
    <string name="select_question_type">Select type</string>
    <string name="publish">Publish</string>
    <string name="publish_info">Your test will be visible on main page</string>
    <string name="open">Open</string>
    <string name="open_info">Users will be able to take the test</string>
    <string name="open_no_questions">Test with no questions cannot be opened</string>
    <string name="test_link">Test link</string>
    <string name="test_link_info">You can share your test using generated link\n\nYou can disable the link for some time if necessary</string>
    <string name="test_link_copy">Copy test link</string>
    <string name="test_link_share">Share test link</string>
    <string name="test_link_copied">Test link copied to clipboard</string>
    <string name="test_link_disabled">Test link is disabled</string>
    <string name="log_in_to_get_test">Please log in to get to the test</string>
    <string name="enable_test_link">Enable link in test settings</string>
    <string name="show_more_settings">Show more settings</string>
    <string name="show_results">Show results</string>
    <string name="show_results_info">Users will see their points (total number only, not per question) after finishing the test\n\nWhen enabled/disabled, it affects all users, including the ones who took the test before the change</string>
    <string name="show_correct_answers">Show correct answers</string>
    <string name="show_correct_answers_info">If enabled, users finished the test can see their points and the correct answers for every question\n\nWhen enabled/disabled, it affects all users, including the ones who took the test before the change</string>
    <string name="show_correct_answers_after_question">Show correct answers after each question</string>
    <string name="show_correct_answers_after_question_info">If enabled, the correct answers are shown after submitting each question\n\nIt is unavailable when navigation between questions is enabled</string>
    <string name="retaking">Test retaking</string>
    <string name="retaking_info">If enabled, users can take the test an unlimited number of times\n\nOtherwise, only one attempt is allowed</string>
    <string name="navigation_between_questions">Navigation between questions</string>
    <string name="random_question_order">Random question order</string>
    <string name="random_answer_order">Random answer order</string>
    <string name="time_limit">Time limit</string>
    <string name="time_limit_info">Time limit sets the time limit for the test. When the time is up, the test is automatically finished\n\nNotice: if a user minimizes the app and do not open it again or open it too late, the points are calculated based on the previously submitted answers (or saved with \"Save draft\" button) only\n\nTime limit per question sets the time limit for each question (not applied when navigation is enabled). When the time is up, the answer is automatically submitted\n\nNotice: some required questions might remain unanswered if the time is up\n\nIf both limits are set, limit per question is applied</string>
    <string name="time_limit_question">Time limit per question</string>
    <string name="time_limit_per_question">for each question</string>
    <string name="no_time_limit">No time limit</string>
    <plurals name="hours">
        <item quantity="one">%d hour</item>
        <item quantity="other">%d hours</item>
    </plurals>
    <plurals name="minutes">
        <item quantity="one">%d minute</item>
        <item quantity="other">%d minutes</item>
    </plurals>
    <string name="create_test_success">Test successfully created</string>
    <string name="edit_questions">Edit questions</string>
    <string name="edit_grading_system">Edit grading system</string>
    <string name="category_all">All Tests</string>
    <string name="category_languages">Languages</string>
    <string name="category_history">History</string>
    <string name="category_culture">Art &amp; Culture</string>
</resources>