<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
  <item
      android:id="@+id/main_action_rotate"
      android:icon="@drawable/ic_rotate"
      android:title="@string/rotate"
      app:showAsAction="ifRoom" />

  <item
      android:id="@+id/main_action_flip"
      android:icon="@drawable/ic_flip_24"
      android:title="@string/flip"
      app:showAsAction="ifRoom">
    <menu>
      <item
          android:id="@+id/main_action_flip_horizontally"
          android:title="@string/flip_horizontally" />
      <item
          android:id="@+id/main_action_flip_vertically"
          android:title="@string/flip_vertically" />
    </menu>
  </item>

  <item
      android:id="@+id/main_action_crop"
      android:title="@string/crop"
      app:showAsAction="always" />
</menu>
