<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="@dimen/toolbar_height"
            app:title="@string/test_settings"
            app:menu="@menu/test_edit_menu" />

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/toolbar_height"
        android:fillViewport="true"
        android:background="@color/white">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/ivImage"
                android:layout_width="300dp"
                android:layout_height="250dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/rounded_rect_20_dp"
                android:outlineProvider="background"
                android:scaleType="centerCrop"
                android:contentDescription="@string/test_image"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:src="@drawable/ic_feed"/>

            <ImageView
                android:id="@+id/ivEditImage"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginBottom="1dp"
                android:layout_marginEnd="1dp"
                android:src="@drawable/ic_edit_image"
                android:contentDescription="@string/test_image"
                app:layout_constraintBottom_toBottomOf="@id/ivImage"
                app:layout_constraintEnd_toEndOf="@id/ivImage" />

            <LinearLayout
                android:id="@+id/llTestForm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginHorizontal="@dimen/margin_horizontal"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/ivImage">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tilTitle"
                    style="@style/CustomTextInputLayout.LightGray"
                    android:hint="@string/title"
                    app:startIconDrawable="@drawable/ic_title"
                    app:errorEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etTitle"
                        style="@style/CustomTextInputEditText.LightGray"
                        android:inputType="textMultiLine"
                        android:maxLength="@integer/title_max_length" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tilDescription"
                    style="@style/CustomTextInputLayout.LightGray"
                    android:hint="@string/description_optional"
                    app:startIconDrawable="@drawable/ic_description"
                    app:counterEnabled="true"
                    app:counterMaxLength="@integer/description_max_length"
                    app:errorEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etDescription"
                        style="@style/CustomTextInputEditText.LightGray"
                        android:inputType="textMultiLine" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tilPassword"
                    style="@style/CustomTextInputLayout.LightGray"
                    android:hint="@string/password_optional"
                    app:startIconDrawable="@drawable/ic_lock"
                    app:errorEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etPassword"
                        style="@style/CustomTextInputEditText.LightGray"
                        android:inputType="text"
                        android:maxLength="@integer/field_max_length" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tilCategory"
                    style="@style/CustomTextInputLayout.LightGray"
                    android:hint="@string/category"
                    app:startIconDrawable="@drawable/ic_category"
                    app:errorEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etCategory"
                        style="@style/CustomTextInputEditText.LightGray"
                        android:focusable="false"
                        android:inputType="text" />

                </com.google.android.material.textfield.TextInputLayout>

                <LinearLayout
                    android:id="@+id/llPublish"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tvPublish"
                        style="@style/SwitchTextView"
                        android:text="@string/publish" />

                    <com.google.android.material.switchmaterial.SwitchMaterial
                        android:id="@+id/switchPublish"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/llTestLink"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tvTestLink"
                        style="@style/SwitchTextView"
                        android:text="@string/test_link" />

                    <com.google.android.material.switchmaterial.SwitchMaterial
                        android:id="@+id/switchTestLink"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/llTestLinkData"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tvTestLinkData"
                        style="@style/CustomTextView.AutoSize"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@drawable/rounded_rect_10_dp"
                        android:backgroundTint="@color/purple_light"
                        android:padding="6dp"
                        android:autoSizeMinTextSize="14sp"
                        android:autoSizeMaxTextSize="18sp"
                        android:ellipsize="end"
                        tools:text="https://testik.page.link/QdJyWkdGp8ndmNgu8" />

                    <ImageButton
                        android:id="@+id/btnTestLinkCopy"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginStart="8dp"
                        android:background="@drawable/ic_copy"
                        android:backgroundTint="@color/black"
                        android:contentDescription="@string/test_link_copy" />

                    <ImageButton
                        android:id="@+id/btnTestLinkShare"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginStart="8dp"
                        android:background="@drawable/ic_share"
                        android:backgroundTint="@color/black"
                        android:contentDescription="@string/test_link_copy" />

                </LinearLayout>

                <TextView
                    android:id="@+id/tvMoreSettings"
                    style="@style/CustomTextView.BlueDark"
                    android:layout_marginTop="10dp"
                    android:textSize="18sp"
                    android:text="@string/show_more_settings" />

                <LinearLayout
                    android:id="@+id/llNavigateBetweenQuestions"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tvNavigateBetweenQuestions"
                        style="@style/SwitchTextView"
                        android:text="@string/navigation_between_questions" />

                    <com.google.android.material.switchmaterial.SwitchMaterial
                        android:id="@+id/switchNavigateBetweenQuestions"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/llRandomizeQuestions"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tvRandomizeQuestions"
                        style="@style/SwitchTextView"
                        android:text="@string/random_question_order" />

                    <com.google.android.material.switchmaterial.SwitchMaterial
                        android:id="@+id/switchRandomizeQuestions"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/llRandomizeAnswers"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tvRandomizeAnswers"
                        style="@style/SwitchTextView"
                        android:text="@string/random_answer_order" />

                    <com.google.android.material.switchmaterial.SwitchMaterial
                        android:id="@+id/switchRandomizeAnswers"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1" />

                </LinearLayout>

            </LinearLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnSave"
                style="@style/CustomButton.PurpleDark"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="10dp"
                android:text="@string/save"
                app:layout_constraintTop_toBottomOf="@id/llTestForm"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnEditQuestions"
                style="@style/CustomButton.PurpleDark"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="@dimen/margin_bottom"
                android:text="@string/edit_questions"
                app:layout_constraintTop_toBottomOf="@id/btnSave"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnEditGradingSystem"
                style="@style/CustomButton.PurpleDark"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="@dimen/margin_bottom"
                android:text="@string/edit_grading_system"
                app:layout_constraintTop_toBottomOf="@id/btnEditQuestions"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>